# tender-doc-autofill

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
mappings/: 01_anketa.yaml  02_zayavka.yaml  03_predlozhenie.yaml  04_garantiya.yaml
output/: 01_Анкета_участника.docx  02_Заявка_на_участие_в_закупке.docx  03_Предложение_о_цене_договора.docx  04_Гарантийное_письмо.docx
src/: __main__.py  data_loader.py  extractor.py  generator.py  main.py  mapping_loader.py  models.py  template_engine.py  utils.py
templates/: 04_garantiya.docx
tests/: test_data_loader.py  test_edge_cases.py  test_extractor.py  test_generator.py  test_main.py  test_mapping_loader.py  test_models.py  test_template_engine.py  test_utils.py
