[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homelio-tender-autofill"
version = "1.0.0"
description = "Автозаполнение тендерных DOCX-документов по JSON-данным"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["src*"]
